@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.0.76 - 2015-09-12
 
 CHANGES IN V1.0.77
 
+	- cups-browsed: Let option settings of a generated print queue
+	  be saved before taking the queue down so that when the remote
+	  printer appears again all user changes get restored, making
+	  user changes permanent on generated queues.
 	- foomatic-rip: Fixed string length for shell path constant, to
 	  work also with systems having longer paths (Bug #1325)
 	- cups-browsed: Added a mode in which IP-based device URIs
